
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int gs_texture_t ;


 int UNUSED_PARAMETER (int) ;

void gs_cubetexture_set_image(gs_texture_t *cubetex, uint32_t side,
         const void *data, uint32_t linesize, bool invert)
{

 UNUSED_PARAMETER(cubetex);
 UNUSED_PARAMETER(side);
 UNUSED_PARAMETER(data);
 UNUSED_PARAMETER(linesize);
 UNUSED_PARAMETER(invert);
}
