; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_cubetexture_set_image.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_cubetexture_set_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_cubetexture_set_image(i32* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = ptrtoint i32* %11 to i32
  %13 = call i32 @UNUSED_PARAMETER(i32 %12)
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @UNUSED_PARAMETER(i32 %14)
  %16 = load i8*, i8** %8, align 8
  %17 = ptrtoint i8* %16 to i32
  %18 = call i32 @UNUSED_PARAMETER(i32 %17)
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @UNUSED_PARAMETER(i32 %19)
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @UNUSED_PARAMETER(i32 %21)
  ret void
}

declare dso_local i32 @UNUSED_PARAMETER(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
